archive/parser/tests/snapshots/statements/valid/0006@1.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: DROP TABLE tablename;
---
Parse {
    cst: SourceFile@0..21
      Drop@0..4 "DROP"
      Whitespace@4..5 " "
      Table@5..10 "TABLE"
      Whitespace@10..11 " "
      Ident@11..20 "tablename"
      Ascii59@20..21 ";"
    ,
    errors: [],
    stmts: [],
}
